--- a/objectflowview/src/main/res/anim/anim_flow.xml
+++ b/objectflowview/src/main/res/anim/anim_flow.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:repeatMode="restart">
 
     <translate
-        android:fromXDelta="30%"
+        android:fromXDelta="10%"
         android:toXDelta="-100%"
-        android:duration="20000"
-        android:repeatCount="1000"
+        android:repeatCount="infinite"
         />
 
 </set>
