--- a/objectflowview/src/main/res/values/attrs.xml
+++ b/objectflowview/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <declare-styleable name="ObjectFlowView">
+        <attr name="animDuration" format="integer"></attr>
 
     </declare-styleable>
 </resources>
