--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,11 +8,15 @@
 
     <com.aqoong.lib.objectflowview.ObjectFlowView
         android:id="@+id/objectflow"
+        app:animDuration="500"
+        app:textSize="120"
+        app:textColor="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
     <Button
         android:id="@+id/button_test"
+        android:visibility="gone"
         android:text="RESET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
