--- a/objectflowview/src/main/res/values/attrs.xml
+++ b/objectflowview/src/main/res/values/attrs.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <attr name="textSize" format="dimension|float"></attr>
+    <attr name="textColor" format="color"></attr>
 
     <declare-styleable name="ObjectFlowView">
         <attr name="animDuration" format="integer"></attr>
-
+        <attr name="textSize"></attr>
+        <attr name="textColor"></attr>
     </declare-styleable>
 </resources>
