--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -12,7 +12,7 @@
         app:objectInterval="50"
         android:layout_centerVertical="true"
         app:textColor="@android:color/white"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"/>
 
     <Button
