--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    >
+    android:background="@color/colorPrimaryDark">
 
 
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
+    <com.aqoong.lib.objectflowview.ObjectFlowView
+        android:id="@+id/objectflow"
+        app:textSize="40sp"
+        app:animDuration="3000"
+        app:objectInterval="50"
+        android:layout_centerVertical="true"
+        app:textColor="@android:color/white"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
